--- a/index.html
+++ b/index.html
@@ -573,36 +573,94 @@
       </section>
       <section class="services" id="services">
         <div class="main-heading"><h2>services</h2></div>
-        <div class="text">
-          <h3>front End Developer{}</h3>
-          <span id="show" onclick="showP(this.id)">
-            view more <i class="fa-solid fa-angles-right"></i>
-          </span>
-        </div>
-        <div class="services-container">
-          <div class="content">
-            <div class="head">
-              <h3>front End Developer{</h3>
-              <span id="hide" onclick="showP(this.id)">x</span>
-            </div>
-            <div class="body">
-              <p>
-                1 > convert ui / ux design to html design <br />
-                2 > Formatting this design and making it responsive to browsers
-                using css and a library <br />
-                3 > Adding JavaScript properties to make this design dynamic and
-                user-interactive <br />
-                <span
-                  style="
-                    width: 100%;
-                    display: inline-block;
-                    text-align: end;
-                    font-size: 28px;
-                    font-weight: 500;
-                  "
-                  >}</span
+        <div class="card">
+          <div class="heading">
+            Frontend Developer <span>(HTML, CSS &amp; JS)</span>
+          </div>
+          <div class="code">
+            <svg
+              xml:space="preserve"
+              viewBox="0 0 472.615 472.615"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              xmlns="http://www.w3.org/2000/svg"
+              id="Layer_1"
+              version="1.1"
+              fill="#000000"
+            >
+              <g>
+                <g>
+                  <polygon
+                    points="472.615,384 472.615,324.894 0,324.894 0,384 147.692,384 147.692,433.231 108.308,433.231 108.308,452.923 364.308,452.923 364.308,433.231 324.923,433.231 324.923,384"
+                  ></polygon>
+                </g>
+              </g>
+              <g>
+                <g>
+                  <path
+                    d="M0,19.692v285.509h472.615V19.692H0z M226.462,49.201h49.231v19.692h-49.231V49.201z M216.615,98.432H256v19.692h-39.385 V98.432z M187.077,167.355v-19.692h118.154v19.692H187.077z M285.538,196.894v19.692h-19.692v-19.692H285.538z M187.077,49.201 h19.692v19.692h-19.692V49.201z M147.692,49.201h19.692v19.692h-19.692V49.201z M49.231,98.432h147.692v19.692H49.231V98.432z M90.654,253.931l-13.923,13.923l-41.423-41.423l41.423-41.424l13.923,13.923l-27.5,27.5L90.654,253.931z M112.529,279.316 l-18.288-7.307l39.385-98.462l18.288,7.307L112.529,279.316z M169.423,267.855L155.5,253.931L183,226.432l-27.499-27.5 l13.922-13.923l41.424,41.424L169.423,267.855z M226.462,196.894h19.692v19.692h-19.692V196.894z M423.385,265.817H236.308 v-19.692h187.077V265.817z M423.385,216.586H305.231v-19.692h118.154V216.586z M423.385,167.355h-98.462v-19.692h98.462V167.355z M423.385,118.124H275.692V98.432h147.692V118.124z M423.385,68.894h-128V49.201h128V68.894z"
+                  ></path>
+                </g>
+              </g>
+            </svg>
+          </div>
+          <div class="icons-container">
+            <div class="icons">
+              <a href="https://www.facebook.com/elbqarey" target="_blank">
+                <svg
+                  viewBox="0 0 24 24"
+                  height="1em"
+                  xmlns="http://www.w3.org/2000/svg"
                 >
-              </p>
+                  <path
+                    d="M20 12.05C19.9813 10.5255 19.5273 9.03809 18.6915 7.76295C17.8557 6.48781 16.673 5.47804 15.2826 4.85257C13.8921 4.2271 12.3519 4.01198 10.8433 4.23253C9.33473 4.45309 7.92057 5.10013 6.7674 6.09748C5.61422 7.09482 4.77005 8.40092 4.3343 9.86195C3.89856 11.323 3.88938 12.8781 4.30786 14.3442C4.72634 15.8103 5.55504 17.1262 6.69637 18.1371C7.83769 19.148 9.24412 19.8117 10.75 20.05V14.38H8.75001V12.05H10.75V10.28C10.7037 9.86846 10.7483 9.45175 10.8807 9.05931C11.0131 8.66687 11.23 8.30827 11.5161 8.00882C11.8022 7.70936 12.1505 7.47635 12.5365 7.32624C12.9225 7.17612 13.3368 7.11255 13.75 7.14003C14.3498 7.14824 14.9482 7.20173 15.54 7.30003V9.30003H14.54C14.3676 9.27828 14.1924 9.29556 14.0276 9.35059C13.8627 9.40562 13.7123 9.49699 13.5875 9.61795C13.4627 9.73891 13.3667 9.88637 13.3066 10.0494C13.2464 10.2125 13.2237 10.387 13.24 10.56V12.07H15.46L15.1 14.4H13.25V20C15.1399 19.7011 16.8601 18.7347 18.0985 17.2761C19.3369 15.8175 20.0115 13.9634 20 12.05Z"
+                  />
+                </svg>
+              </a>
+            </div>
+            <div class="icons">
+              <a href="https://wa.me/01033892219" target="_blank">
+                <svg
+                  viewBox="0 0 16 16"
+                  height="1em"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M11.42 9.49c-.19-.09-1.1-.54-1.27-.61s-.29-.09-.42.1-.48.6-.59.73-.21.14-.4 0a5.13 5.13 0 0 1-1.49-.92 5.25 5.25 0 0 1-1-1.29c-.11-.18 0-.28.08-.38s.18-.21.28-.32a1.39 1.39 0 0 0 .18-.31.38.38 0 0 0 0-.33c0-.09-.42-1-.58-1.37s-.3-.32-.41-.32h-.4a.72.72 0 0 0-.5.23 2.1 2.1 0 0 0-.65 1.55A3.59 3.59 0 0 0 5 8.2 8.32 8.32 0 0 0 8.19 11c.44.19.78.3 1.05.39a2.53 2.53 0 0 0 1.17.07 1.93 1.93 0 0 0 1.26-.88 1.67 1.67 0 0 0 .11-.88c-.05-.07-.17-.12-.36-.21z"
+                  />
+                  <path
+                    d="M13.29 2.68A7.36 7.36 0 0 0 8 .5a7.44 7.44 0 0 0-6.41 11.15l-1 3.85 3.94-1a7.4 7.4 0 0 0 3.55.9H8a7.44 7.44 0 0 0 5.29-12.72zM8 14.12a6.12 6.12 0 0 1-3.15-.87l-.22-.13-2.34.61.62-2.28-.14-.23a6.18 6.18 0 0 1 9.6-7.65 6.12 6.12 0 0 1 1.81 4.37A6.19 6.19 0 0 1 8 14.12z"
+                  />
+                </svg>
+              </a>
+            </div>
+            <div class="icons">
+              <a
+                href="https://www.instagram.com/a7med_elbqarey"
+                target="_blank"
+              >
+                <svg
+                  viewBox="0 0 448 512"
+                  height="1em"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
+                  ></path>
+                </svg>
+              </a>
+            </div>
+            <div class="icons">
+              <a href="https://github.com/Ahmed-Elbqarey" target="_blank">
+                <svg
+                  viewBox="0 0 496 512"
+                  height="1em"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
+                  ></path>
+                </svg>
+              </a>
             </div>
           </div>
         </div>
