--- a/index.html
+++ b/index.html
@@ -329,6 +329,21 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
+                  src="images/quran.PNG"
+                  class="d-block w-100"
+                  alt="adidas"
+                />
+                <div class="carousel-caption">
+                  <a
+                    href="https://ahmed-elbqarey.github.io/quran"
+                    target="_blank"
+                    >Live Demo <i class="fa-solid fa-angles-right"></i>
+                  </a>
+                  <h5>Holy Quran</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
                   src="images/adidas.PNG"
                   class="d-block w-100"
                   alt="adidas"
