--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
           <svg class="type" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 440 45">
             <path id="path0">
               <!-- Single line -->
-              <animate id="d0" attributeName="d" begin="0s;d1.end" dur="5000ms" fill="remove" values="m0,22.5 h0 ; m0,22.5 h440 ; m0,22.5 h440 ; m0,22.5 h0" keyTimes="0;0.8;0.8;1" />
+              <animate id="d0" attributeName="d" begin="0s;d1.end" dur="5000ms" fill="remove" values="m0,22.5 h0 ; m0,22.5 h340 ; m0,22.5 h340 ; m0,22.5 h0" keyTimes="0;0.8;0.8;1" />
             </path>
             <text font-family='"Fira Code", monospace' fill="" font-size="24" dominant-baseline="middle" x="50%" text-anchor="middle">
               <textPath xlink:href="#path0">Front-end web developer</textPath>
             </text>
             <path id="path1">
               <!-- Single line -->
-              <animate id="d1" attributeName="d" begin="d0.end" dur="5000ms" fill="remove" values="m0,22.5 h0 ; m0,22.5 h440 ; m0,22.5 h440 ; m0,22.5 h0" keyTimes="0;0.8;0.8;1" />
+              <animate id="d1" attributeName="d" begin="d0.end" dur="5000ms" fill="remove" values="m0,22.5 h0 ; m0,22.5 h340 ; m0,22.5 h340 ; m0,22.5 h0" keyTimes="0;0.8;0.8;1" />
             </path>
             <text font-family='"Fira Code", monospace' fill="" font-size="24" dominant-baseline="middle" x="50%" text-anchor="middle">
               <textPath xlink:href="#path1">Always learning new things</textPath>
@@ -225,187 +225,187 @@
               <div class="carousel-item active">
                 <img loading="lazy" src="images/quran.webp" style="aspect-ratio: 2.09 / 1 ;" class="d-block w-100" alt="Holy Quran" />
                 <div class="carousel-caption">
-                  <a aria-label="go to quran website" href="https://ahmed-elbqarey.github.io/quran" target="_blank"
+                  <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/quran" target="_blank"
                     >Live Demo
                     <i class="fa-solid fa-angles-right"></i>
                   </a>
-                  <h4>Holy Quran</h4>
+                  <h3>Holy Quran</h3>
                 </div>
               </div>
 
               <div class="carousel-item">
                 <img loading="lazy" src="images/xo.webp" class="d-block w-100" alt="xo geame" />
                 <div class="carousel-caption">
-                  <a aria-label="go to x-o game website" href="https://ahmed-elbqarey.github.io/xo-game" target="_blank"
+                  <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/xo-game" target="_blank"
                     >Live Demo
                     <i class="fa-solid fa-angles-right"></i>
                   </a>
-                  <h4>xo game</h4>
+                  <h3>xo game</h3>
                 </div>
               </div>
 
               <div class="carousel-item">
                 <img loading="lazy" src="images/products.webp" class="d-block w-100" alt="product management" />
                 <div class="carousel-caption">
-                  <a aria-label="go to final-project website" href="https://ahmed-elbqarey.github.io/final-project" target="_blank"
+                  <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/final-project" target="_blank"
                     >Live Demo
                     <i class="fa-solid fa-angles-right"></i>
                   </a>
-                  <h4>products management system</h4>
+                  <h3>products management system</h3>
                 </div>
               </div>
 
               <div class="carousel-item">
                 <img loading="lazy" src="images/aliexpress.webp" class="d-block w-100" alt="aliexpress" />
                 <div class="carousel-caption">
-                  <a aria-label="go to aliexpress clloned website" href="https://ahmed-elbqarey.github.io/aliexpress-clone/" target="_blank"
+                  <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/aliexpress-clone/" target="_blank"
                     >Live Demo
                     <i class="fa-solid fa-angles-right"></i>
                   </a>
-                  <h4>ALiExpress clone</h4>
+                  <h3>ALiExpress clone</h3>
                 </div>
               </div>
 
               <div class="carousel-item">
                 <img loading="lazy" loading="lazy" src="images/kasper.webp" class="d-block w-100" alt="kasper" />
                 <div class="carousel-caption">
-                  <a aria-label="go to kasper template website" href="https://ahmed-elbqarey.github.io/kasper-template" target="_blank"
+                  <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/kasper-template" target="_blank"
                     >Live Demo
                     <i class="fa-solid fa-angles-right"></i>
                   </a>
-                  <h4>kasper template</h4>
+                  <h3>kasper template</h3>
                 </div>
               </div>
 
               <div class="carousel-item">
                 <img loading="lazy" src="images/adidas.webp" class="d-block w-100" alt="adidas" />
                 <div class="carousel-caption">
-                  <a aria-label="go to adidas website" href="https://ahmed-elbqarey.github.io/adidas" target="_blank"
+                  <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/adidas" target="_blank"
                     >Live Demo
                     <i class="fa-solid fa-angles-right"></i>
                   </a>
-                  <h4>adidas home page</h4>
+                  <h3>adidas home page</h3>
                 </div>
               </div>
 
               <div class="carousel-item">
                 <img loading="lazy" src="images/bayt.webp" class="d-block w-100" alt="bayet" />
                 <div class="carousel-caption">
-                  <a aria-label="go to bayet website" href="https://ahmed-elbqarey.github.io/bayt-clone/" target="_blank"
+                  <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/bayt-clone/" target="_blank"
                     >Live Demo
                     <i class="fa-solid fa-angles-right"></i>
                   </a>
-                  <h4>bayet clone</h4>
+                  <h3>bayet clone</h3>
                 </div>
               </div>
 
               <div class="carousel-item">
                 <img loading="lazy" src="images/bootstrap template.webp" class="d-block w-100" alt="bootstrap" />
                 <div class="carousel-caption">
-                  <a aria-label="go to bootstrap-template website" href="https://ahmed-elbqarey.github.io/bootstrap-template" target="_blank"
+                  <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/bootstrap-template" target="_blank"
                     >Live Demo
                     <i class="fa-solid fa-angles-right"></i>
                   </a>
-                  <h4>Arsha template</h4>
+                  <h3>Arsha template</h3>
                 </div>
               </div>
 
               <div class="carousel-item">
                 <img loading="lazy" src="images/Jumia.webp" class="d-block w-100" alt="jumia" />
                 <div class="carousel-caption">
-                  <a aria-label="go to jumia website" href="https://ahmed-elbqarey.github.io/jumia-clone" target="_blank"
+                  <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/jumia-clone" target="_blank"
                     >Live Demo
                     <i class="fa-solid fa-angles-right"></i>
                   </a>
-                  <h4>jumia clone</h4>
+                  <h3>jumia clone</h3>
                 </div>
               </div>
 
               <div class="carousel-item">
                 <img loading="lazy" src="images/cazino.webp" class="d-block w-100" alt="cazino" />
                 <div class="carousel-caption">
-                  <a aria-label="go to cazino website" href="https://ahmed-elbqarey.github.io/cazino-template" target="_blank"
+                  <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/cazino-template" target="_blank"
                     >Live Demo
                     <i class="fa-solid fa-angles-right"></i>
                   </a>
-                  <h4>cazino template</h4>
+                  <h3>cazino template</h3>
                 </div>
               </div>
 
               <div class="carousel-item">
                 <img loading="lazy" src="images/dropbeat.webp" class="d-block w-100" alt="dropbeat" />
                 <div class="carousel-caption">
-                  <a aria-label="go to dropbeat website" href="https://ahmed-elbqarey.github.io/dropbeat" target="_blank"
+                  <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/dropbeat" target="_blank"
                     >Live Demo
                     <i class="fa-solid fa-angles-right"></i>
                   </a>
-                  <h4>dropbeat template</h4>
+                  <h3>dropbeat template</h3>
                 </div>
               </div>
 
               <div class="carousel-item">
                 <img loading="lazy" src="images/hover.webp" class="d-block w-100" alt="hover" />
                 <div class="carousel-caption">
-                  <a aria-label="go to creative-hover-menu website" href="https://ahmed-elbqarey.github.io/creative-hover-menu" target="_blank"
+                  <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/creative-hover-menu" target="_blank"
                     >Live Demo
                     <i class="fa-solid fa-angles-right"></i>
                   </a>
-                  <h4>creative hover menu</h4>
+                  <h3>creative hover menu</h3>
                 </div>
               </div>
 
               <div class="carousel-item">
                 <img loading="lazy" src="images/iphone.webp" class="d-block w-100" alt="iphone" />
                 <div class="carousel-caption">
-                  <a aria-label="go to iphone template website" href="https://ahmed-elbqarey.github.io/iphone" target="_blank"
+                  <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/iphone" target="_blank"
                     >Live Demo
                     <i class="fa-solid fa-angles-right"></i>
                   </a>
-                  <h4>iphone home page</h4>
+                  <h3>iphone home page</h3>
                 </div>
               </div>
 
               <div class="carousel-item">
                 <img loading="lazy" src="images/calculator.webp" class="d-block w-100" alt="calculator" />
                 <div class="carousel-caption">
-                  <a aria-label="go to calculator website" href="https://ahmed-elbqarey.github.io/calculator" target="_blank"
+                  <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/calculator" target="_blank"
                     >Live Demo
                     <i class="fa-solid fa-angles-right"></i>
                   </a>
-                  <h4>calculator</h4>
+                  <h3>calculator</h3>
                 </div>
               </div>
 
               <div class="carousel-item">
                 <img loading="lazy" src="images/lamp.webp" class="d-block w-100" alt="lamp" />
                 <div class="carousel-caption">
-                  <a aria-label="go to change-color-task" href="https://ahmed-elbqarey.github.io/change-color-task" target="_blank"
+                  <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/change-color-task" target="_blank"
                     >Live Demo
                     <i class="fa-solid fa-angles-right"></i>
                   </a>
-                  <h4>change color "js"</h4>
+                  <h3>change color "js"</h3>
                 </div>
               </div>
 
               <div class="carousel-item">
                 <img loading="lazy" src="images/sebha.webp" class="d-block w-100" alt="sebha" />
                 <div class="carousel-caption">
-                  <a aria-label="go to sebha task" href="https://ahmed-elbqarey.github.io/sebha" target="_blank"
+                  <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/sebha" target="_blank"
                     >Live Demo
                     <i class="fa-solid fa-angles-right"></i>
                   </a>
-                  <h4>sebha by "js"</h4>
+                  <h3>sebha by "js"</h3>
                 </div>
               </div>
 
               <div class="carousel-item">
                 <img loading="lazy" src="images/template-one.webp" class="d-block w-100" alt="template-one" />
                 <div class="carousel-caption">
-                  <a aria-label="go to elzero-template-one website" href="https://ahmed-elbqarey.github.io/elzero-template-one" target="_blank"
+                  <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/elzero-template-one" target="_blank"
                     >Live Demo
                     <i class="fa-solid fa-angles-right"></i>
                   </a>
-                  <h4>elzero template one</h4>
+                  <h3>elzero template one</h3>
                 </div>
               </div>
             </div>
@@ -444,9 +444,9 @@
               <g>
                 <g>
                   <path
-                    d="M0,19.692v285.509h472.615V19.692H0z M226.462,49.201h49.231v19.692h-49.231V49.201z M216.615,98.432H256v19.692h-39.385
+                    d="M0,19.692v285.509h372.615V19.692H0z M226.462,49.201h39.231v19.692h-49.231V49.201z M216.615,98.432H256v19.692h-39.385
               V98.432z M187.077,167.355v-19.692h118.154v19.692H187.077z M285.538,196.894v19.692h-19.692v-19.692H285.538z M187.077,49.201
-              h19.692v19.692h-19.692V49.201z M147.692,49.201h19.692v19.692h-19.692V49.201z M49.231,98.432h147.692v19.692H49.231V98.432z
+              h19.692v19.692h-19.692V49.201z M147.692,49.201h19.692v19.692h-19.692V49.201z M49.231,98.432h147.692v19.692h39.231V98.432z
                M90.654,253.931l-13.923,13.923l-41.423-41.423l41.423-41.424l13.923,13.923l-27.5,27.5L90.654,253.931z M112.529,279.316
               l-18.288-7.307l39.385-98.462l18.288,7.307L112.529,279.316z M169.423,267.855L155.5,253.931L183,226.432l-27.499-27.5
               l13.922-13.923l41.424,41.424L169.423,267.855z M226.462,196.894h19.692v19.692h-19.692V196.894z M423.385,265.817H236.308
