--- a/index.html
+++ b/index.html
@@ -5,12 +5,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="hello , my name is ahmed elbqrey iam frontend developoer with high exprince in build web applications and i will happy to work with you" />
+
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="language" content="English" />
+    <meta http-equiv="content-language" content="en" />
+    <meta name="title" content="Ahmed Elbqarey - Personal Portfolio" />
+    <meta name="author" content="Ahmed Elbqarey" />
+    <meta
+      name="keywords"
+      content="Ahmed Elbqarey,ahmed elbqarey,Ahmed Elbqarey,Programmer,احمد محمد,
+      trend,#trends,
+      Ahmed Elbqarey,ahmedelbqarey,ahmedelbqarey,AhmedElbqarey,البقرى,
+      AhmedElbqarey,احمد البقرى, احمد محمد البقرى ,أحمد البقرى فرونت اند,
+      Ahmed Front-End Web Developer,Front-End Web Developer, Web Developer,
+      Web Designer, ahmed elbqarey, ahmed elbqarey, Ahmed Elbqarey, Portfolio,
+      personal website,portfolio,designer
+      ,احمد البقرى,مطور ويب امامي,مبرمج"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="google-site-verification" content="tKJHhZMPiTSGB-6-s-N3vzAhMzZ20sklgIC15TxcUiA" />
+    <meta name="revisit-after" content="1 days" />
+    <meta property="og:title" content="Ahmed Elbqarey - Personal Portfolio" />
+    <meta property="og:description" content="Ahmed Elbqarey a Front-End web developer" />
+    <meta property="og:url" content="https://ahmed-elbqarey.vercel.app" />
+    <meta property="og:site_name" content="Ahmed Elbqarey" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="ar-EG" />
+    <meta property="og:image" content="https://ahmed-elbqarey.vercel.app/images/screenshot.png" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Ahmed Elbqarey - Personal Portfolio" />
+    <meta property="twitter:description" content="Ahmed Elbqarey a Front-End web developer" />
+    <meta property="twitter:url" content="https://ahmed-elbqarey.vercel.app" />
+    <meta property="twitter:site_name" content="Ahmed Elbqarey" />
+    <meta property="twitter:type" content="website" />
+    <meta property="twitter:locale" content="ar-EG" />
+    <meta property="twitter:image" content="https://ahmed-elbqarey.vercel.app/images/images/screenshot.png" />
+    <title>Ahmed Elbqarey - Personal Portfolio</title>
+    <link rel="canonical" href="https://ahmed-elbqarey.vercel.app/" />
+    <link rel="manifest" href="https://ahmed-elbqarey.vercel.app/json/manifest.json" />
+    <link rel="manifest" href="https://ahmed-elbqarey.vercel.app/json/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://ahmed-elbqarey.vercel.app/images/icons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="https://ahmed-elbqarey.vercel.app/images/icons/android-chrome-512x512.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="https://ahmed-elbqarey.vercel.app/images/icons/android-chrome-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://ahmed-elbqarey.vercel.app/images/icons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="https://ahmed-elbqarey.vercel.app/images/icons/favicon-16x16.png" />
+    <link rel="icon" href="https://ahmed-elbqarey.vercel.app/images/icons/favicon.ico" />
+    <link rel="mask-icon" href="https://ahmed-elbqarey.vercel.app/images/icons/mask/maskable_icon_x72.png" color="#fbfbfe" />
+    <meta name="msapplication-TileColor" content="#fbfbfe" />
+
     <title>AHMED ELBQAREY</title>
+    <meta name="google-site-verification" content="tKJHhZMPiTSGB-6-s-N3vzAhMzZ20sklgIC15TxcUiA" />
     <link rel="manifest" href="json/manifest.json" />
     <link rel="icon" href="images/icons/favicon.ico" />
     <link rel="stylesheet" href="style/all.min.css" />
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="style/main.css" />
+    <style>
+      .flipX video::-webkit-media-text-track-display {
+        transform: matrix(-1, 0, 0, 1, 0, 0) !important;
+      }
+
+      .flipXY video::-webkit-media-text-track-display {
+        transform: matrix(-1, 0, 0, -1, 0, 0) !important;
+      }
+
+      .flipXYX video::-webkit-media-text-track-display {
+        transform: matrix(1, 0, 0, -1, 0, 0) !important;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
@@ -573,7 +637,7 @@
                   <div class="error" id="messageError"></div>
                 </div>
                 <div class="send-btn">
-                  <input type="submit" value="SEND" class="send-data" onclick="validateForm()" />
+                  <button type="button" class="send-data" onclick="validateForm()">SEND</button>
                 </div>
               </form>
             </div>
