--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <meta property="twitter:site_name" content="Ahmed Elbqarey" />
     <meta property="twitter:type" content="website" />
     <meta property="twitter:locale" content="ar-EG" />
+    <meta name="theme-color" content="#0A0A0A">
     <meta property="twitter:image" content="https://ahmed-elbqarey.vercel.app/images/images/screenshot.png" />
     <title>Ahmed Elbqarey - Personal Portfolio</title>
     <link rel="canonical" href="https://ahmed-elbqarey.vercel.app/" />
@@ -110,15 +111,15 @@
             <i class="fa-brands fa-github"></i>
           </a>
 
-          <a aria-label="open whatsapp" href="https://wa.me/01033892219" target="_blank">
+          <a aria-label="open whatsapp" href="https://wa.me/+201033892219" target="_blank">
             <i class="fa-brands fa-whatsapp"></i>
           </a>
 
-          <a aria-label="go to facebook accont" href="https://www.facebook.com/elbqarey" target="_blank">
+          <a aria-label="go to facebook accont" href="https://www.facebook.com/AhmedAlbqarey/" target="_blank">
             <i class="fa-brands fa-facebook"></i>
           </a>
 
-          <a aria-label="go to instagram accont" href="https://www.instagram.com/A7med_elbqarey" target="_blank">
+          <a aria-label="go to instagram accont" href="https://www.instagram.com/ahmedalbqarey/" target="_blank">
             <i class="fa-brands fa-instagram"></i>
           </a>
         </div>
@@ -522,7 +523,7 @@
           </div>
           <div class="icons-container">
             <div class="icons">
-              <a aria-label="open facebook accont" href="https://www.facebook.com/elbqarey" target="_blank">
+              <a aria-label="open facebook accont" href="https://www.facebook.com/AhmedAlbqarey/" target="_blank">
                 <svg viewBox="0 0 24 24" height="1em" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M20 12.05C19.9813 10.5255 19.5273 9.03809 18.6915 7.76295C17.8557 6.48781 16.673 5.47804 15.2826 4.85257C13.8921 4.2271 12.3519 4.01198 10.8433 4.23253C9.33473 4.45309 7.92057 5.10013 6.7674 6.09748C5.61422 7.09482 4.77005 8.40092 4.3343 9.86195C3.89856 11.323 3.88938 12.8781 4.30786 14.3442C4.72634 15.8103 5.55504 17.1262 6.69637 18.1371C7.83769 19.148 9.24412 19.8117 10.75 20.05V14.38H8.75001V12.05H10.75V10.28C10.7037 9.86846 10.7483 9.45175 10.8807 9.05931C11.0131 8.66687 11.23 8.30827 11.5161 8.00882C11.8022 7.70936 12.1505 7.47635 12.5365 7.32624C12.9225 7.17612 13.3368 7.11255 13.75 7.14003C14.3498 7.14824 14.9482 7.20173 15.54 7.30003V9.30003H14.54C14.3676 9.27828 14.1924 9.29556 14.0276 9.35059C13.8627 9.40562 13.7123 9.49699 13.5875 9.61795C13.4627 9.73891 13.3667 9.88637 13.3066 10.0494C13.2464 10.2125 13.2237 10.387 13.24 10.56V12.07H15.46L15.1 14.4H13.25V20C15.1399 19.7011 16.8601 18.7347 18.0985 17.2761C19.3369 15.8175 20.0115 13.9634 20 12.05Z"
@@ -531,7 +532,7 @@
               </a>
             </div>
             <div class="icons">
-              <a aria-label="open whatsapp" href="https://wa.me/01033892219" target="_blank">
+              <a aria-label="open whatsapp" href="https://wa.me/+201033892219" target="_blank">
                 <svg viewBox="0 0 16 16" height="1em" xmlns="http://www.w3.org/2000/svg">
                   <path d="M11.42 9.49c-.19-.09-1.1-.54-1.27-.61s-.29-.09-.42.1-.48.6-.59.73-.21.14-.4 0a5.13 5.13 0 0 1-1.49-.92 5.25 5.25 0 0 1-1-1.29c-.11-.18 0-.28.08-.38s.18-.21.28-.32a1.39 1.39 0 0 0 .18-.31.38.38 0 0 0 0-.33c0-.09-.42-1-.58-1.37s-.3-.32-.41-.32h-.4a.72.72 0 0 0-.5.23 2.1 2.1 0 0 0-.65 1.55A3.59 3.59 0 0 0 5 8.2 8.32 8.32 0 0 0 8.19 11c.44.19.78.3 1.05.39a2.53 2.53 0 0 0 1.17.07 1.93 1.93 0 0 0 1.26-.88 1.67 1.67 0 0 0 .11-.88c-.05-.07-.17-.12-.36-.21z" />
                   <path d="M13.29 2.68A7.36 7.36 0 0 0 8 .5a7.44 7.44 0 0 0-6.41 11.15l-1 3.85 3.94-1a7.4 7.4 0 0 0 3.55.9H8a7.44 7.44 0 0 0 5.29-12.72zM8 14.12a6.12 6.12 0 0 1-3.15-.87l-.22-.13-2.34.61.62-2.28-.14-.23a6.18 6.18 0 0 1 9.6-7.65 6.12 6.12 0 0 1 1.81 4.37A6.19 6.19 0 0 1 8 14.12z" />
@@ -539,7 +540,7 @@
               </a>
             </div>
             <div class="icons">
-              <a aria-label="open instagram accont" href="https://www.instagram.com/a7med_elbqarey" target="_blank">
+              <a aria-label="open instagram accont" href="https://www.instagram.com/ahmedalbqarey/" target="_blank">
                 <svg viewBox="0 0 448 512" height="1em" xmlns="http://www.w3.org/2000/svg">
                   <path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path>
                 </svg>
@@ -566,7 +567,7 @@
         <form action="#">
           <input type="text" placeholder="Enter Your Full Name" />
           <textarea name="message" placeholder="Enter You message"></textarea>
-          <a aria-label=""href="https://wa.me/01033892219" target="_blank">send</a>
+          <a aria-label=""href="https://wa.me/+201033892219" target="_blank">send</a>
         </form> -->
         <!-- 
         <div class="form-container">
@@ -579,7 +580,7 @@
               <label for="textarea">How Can I Help You?</label>
               <textarea name="textarea" id="textarea" rows="10" cols="50" required=""> </textarea>
             </div>
-            <a aria-label="submit" class="form-submit-btn" type="submit" href="https://wa.me/+201033892219" target="_blank">Submit</a>
+            <a aria-label="submit" class="form-submit-btn" type="submit" href="https://wa.me/+2+201033892219" target="_blank">Submit</a>
           </form>
         </div>
 
@@ -592,15 +593,15 @@
             <i class="fa-brands fa-github"></i>
           </a>
 
-          <a aria-label="open whatsapp" href="https://wa.me/01033892219" target="_blank">
+          <a aria-label="open whatsapp" href="https://wa.me/+201033892219" target="_blank">
             <i class="fa-brands fa-whatsapp"></i>
           </a>
 
-          <a aria-label="go to facebook accont" href="https://www.facebook.com/elbqarey" target="_blank">
+          <a aria-label="go to facebook accont" href="https://www.facebook.com/AhmedAlbqarey/" target="_blank">
             <i class="fa-brands fa-facebook"></i>
           </a>
 
-          <a aria-label="go to instagram accont" href="https://www.instagram.com/A7med_elbqarey" target="_blank">
+          <a aria-label="go to instagram accont" href="https://www.instagram.com/ahmedalbqarey/" target="_blank">
             <i class="fa-brands fa-instagram"></i>
           </a>
         </div>
@@ -626,6 +627,7 @@
                 </div>
                 <div class="input-container">
                   <select name="services-list" id="services-select">
+                    <label for="services-select"></label>
                     <option value="chose servicess">chose servicess</option>
                     <option value="Web Developer">Web Developer</option>
                     <option value="UI UX designer">UI UX designer</option>
