--- a/index.html
+++ b/index.html
@@ -126,24 +126,10 @@
 
         <div class="text">
           <h2>HEllo, iam ahmed</h2>
-          <svg class="type" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 440 45">
-            <path id="path0">
-              <!-- Single line -->
-              <animate id="d0" attributeName="d" begin="0s;d1.end" dur="5000ms" fill="remove" values="m0,22.5 h0 ; m0,22.5 h340 ; m0,22.5 h340 ; m0,22.5 h0" keyTimes="0;0.8;0.8;1" />
-            </path>
-            <text font-family='"Fira Code", monospace' fill="" font-size="24" dominant-baseline="middle" x="50%" text-anchor="middle">
-              <textPath xlink:href="#path0">Front-end web developer</textPath>
-            </text>
-            <path id="path1">
-              <!-- Single line -->
-              <animate id="d1" attributeName="d" begin="d0.end" dur="5000ms" fill="remove" values="m0,22.5 h0 ; m0,22.5 h340 ; m0,22.5 h340 ; m0,22.5 h0" keyTimes="0;0.8;0.8;1" />
-            </path>
-            <text font-family='"Fira Code", monospace' fill="" font-size="24" dominant-baseline="middle" x="50%" text-anchor="middle">
-              <textPath xlink:href="#path1">Always learning new things</textPath>
-            </text>
-          </svg>
+      
+          <a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Fira+Code&size=24&pause=1000&color=FFC779&random=false&width=435&lines=FrontEnd+Developer;Ahmed+Elbqarey" alt="Typing SVG" /></a>
 
-          <a aria-label="Contact Me" href="#contact"
+          <a aria-label="Contact Me" class="contact" href="#contact"
             >contact me
             <i class="fa-solid fa-angles-right"></i>
           </a>
