--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <meta property="twitter:site_name" content="Ahmed Elbqarey" />
     <meta property="twitter:type" content="website" />
     <meta property="twitter:locale" content="ar-EG" />
-    <meta name="theme-color" content="#0A0A0A">
+    <meta name="theme-color" content="#0A0A0A" />
     <meta property="twitter:image" content="https://ahmed-elbqarey.vercel.app/images/images/screenshot.png" />
     <title>Ahmed Elbqarey - Personal Portfolio</title>
     <link rel="canonical" href="https://ahmed-elbqarey.vercel.app/" />
@@ -81,7 +81,7 @@
     <div class="container">
       <div class="header">
         <div id="logo">
-          <img loading="lazy" class="brand" id="brand" src="images/logo.png" alt="" />
+          <img class="brand" id="brand" src="images/logo.png" alt="" />
         </div>
         <!-- <svg  xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 256 256">
           <path fill="currentColor" d="M236.37 139.4a12 12 0 0 0-12-3A84.07 84.07 0 0 1 119.6 31.59a12 12 0 0 0-15-15a108.86 108.86 0 0 0-54.91 38.48A108 108 0 0 0 136 228a107.09 107.09 0 0 0 64.93-21.69a108.86 108.86 0 0 0 38.44-54.94a12 12 0 0 0-3-11.97Zm-49.88 47.74A84 84 0 0 1 68.86 69.51a84.93 84.93 0 0 1 23.41-21.22Q92 52.13 92 56a108.12 108.12 0 0 0 108 108q3.87 0 7.71-.27a84.79 84.79 0 0 1-21.22 23.41Z" />
@@ -126,8 +126,8 @@
 
         <div class="text">
           <h2>HEllo, iam ahmed</h2>
-      
-          <a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Fira+Code&size=24&pause=1000&color=FFC779&random=false&width=435&lines=FrontEnd+Developer;Ahmed+Elbqarey" alt="Typing SVG" /></a>
+
+          <img src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=500&size=24&pause=1000&color=FFC779&random=false&width=435&lines=FrontEnd+Developer;Ahmed+Elbqarey" alt="Typing SVG" />
 
           <a aria-label="Contact Me" class="contact" href="#contact"
             >contact me
