add tawk chat script

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="hello , my name is ahmed elbqrey iam frontend developoer with high exprince in build web applications and i will happy to work with you" />
-
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="language" content="English" />
     <meta http-equiv="content-language" content="en" />
@@ -13,8 +12,10 @@
     <meta name="author" content="Ahmed Elbqarey" />
     <meta
       name="keywords"
-      content="Ahmed Elbqarey,ahmed elbqarey,Ahmed Elbqarey,Programmer,احمد محمد,
-      trend,#trends,
+      content="Ahmed Elbqarey,ahmed elbqarey,Ahmed Elbkarey,Programmer,احمد البقرى,
+      trend,#trends,ahmed mohamed elbqarey,ahmed elbkarey,ahmed albqarey,ahmed albakary,
+      ahmad albakary,ahmed albkaray,ahmed mohamed,احمد البقرى,احمد البكرى,البشمهندس احمد البقرى,
+      المبرمج احمد البقرى,
       Ahmed Elbqarey,ahmedelbqarey,ahmedelbqarey,AhmedElbqarey,البقرى,
       AhmedElbqarey,احمد البقرى, احمد محمد البقرى ,أحمد البقرى فرونت اند,
       Ahmed Front-End Web Developer,Front-End Web Developer, Web Developer,
@@ -273,7 +274,7 @@
           <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img loading="lazy" src="images/quran.webp" style="aspect-ratio: 2.09 / 1" class="d-block w-100" alt="Holy Quran" />
+                <img loading="lazy" src="images/projects/quran.webp" style="aspect-ratio: 2.09 / 1" class="d-block w-100" alt="Holy Quran" />
                 <div class="carousel-caption">
                   <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/quran" target="_blank"
                     >Live Demo
@@ -284,7 +285,7 @@
               </div>
 
               <div class="carousel-item">
-                <img loading="lazy" src="images/xo.webp" class="d-block w-100" alt="xo geame" />
+                <img loading="lazy" src="images/projects/xo.webp" class="d-block w-100" alt="xo geame" />
                 <div class="carousel-caption">
                   <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/xo-game" target="_blank"
                     >Live Demo
@@ -295,7 +296,7 @@
               </div>
 
               <div class="carousel-item">
-                <img loading="lazy" src="images/products.webp" class="d-block w-100" alt="product management" />
+                <img loading="lazy" src="images/projects/products.webp" class="d-block w-100" alt="product management" />
                 <div class="carousel-caption">
                   <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/final-project" target="_blank"
                     >Live Demo
@@ -306,7 +307,7 @@
               </div>
 
               <div class="carousel-item">
-                <img loading="lazy" src="images/aliexpress.webp" class="d-block w-100" alt="aliexpress" />
+                <img loading="lazy" src="images/projects/aliexpress.webp" class="d-block w-100" alt="aliexpress" />
                 <div class="carousel-caption">
                   <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/aliexpress-clone/" target="_blank"
                     >Live Demo
@@ -317,7 +318,7 @@
               </div>
 
               <div class="carousel-item">
-                <img loading="lazy" loading="lazy" src="images/kasper.webp" class="d-block w-100" alt="kasper" />
+                <img loading="lazy" loading="lazy" src="images/projects/kasper.webp" class="d-block w-100" alt="kasper" />
                 <div class="carousel-caption">
                   <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/kasper-template" target="_blank"
                     >Live Demo
@@ -328,7 +329,7 @@
               </div>
 
               <div class="carousel-item">
-                <img loading="lazy" src="images/adidas.webp" class="d-block w-100" alt="adidas" />
+                <img loading="lazy" src="images/projects/adidas.webp" class="d-block w-100" alt="adidas" />
                 <div class="carousel-caption">
                   <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/adidas" target="_blank"
                     >Live Demo
@@ -339,7 +340,7 @@
               </div>
 
               <div class="carousel-item">
-                <img loading="lazy" src="images/bayt.webp" class="d-block w-100" alt="bayet" />
+                <img loading="lazy" src="images/projects/bayt.webp" class="d-block w-100" alt="bayet" />
                 <div class="carousel-caption">
                   <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/bayt-clone/" target="_blank"
                     >Live Demo
@@ -350,7 +351,7 @@
               </div>
 
               <div class="carousel-item">
-                <img loading="lazy" src="images/bootstrap template.webp" class="d-block w-100" alt="bootstrap" />
+                <img loading="lazy" src="images/projects/bootstrap template.webp" class="d-block w-100" alt="bootstrap" />
                 <div class="carousel-caption">
                   <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/bootstrap-template" target="_blank"
                     >Live Demo
@@ -361,7 +362,7 @@
               </div>
 
               <div class="carousel-item">
-                <img loading="lazy" src="images/Jumia.webp" class="d-block w-100" alt="jumia" />
+                <img loading="lazy" src="images/projects/Jumia.webp" class="d-block w-100" alt="jumia" />
                 <div class="carousel-caption">
                   <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/jumia-clone" target="_blank"
                     >Live Demo
@@ -372,7 +373,7 @@
               </div>
 
               <div class="carousel-item">
-                <img loading="lazy" src="images/cazino.webp" class="d-block w-100" alt="cazino" />
+                <img loading="lazy" src="images/projects/cazino.webp" class="d-block w-100" alt="cazino" />
                 <div class="carousel-caption">
                   <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/cazino-template" target="_blank"
                     >Live Demo
@@ -383,7 +384,7 @@
               </div>
 
               <div class="carousel-item">
-                <img loading="lazy" src="images/dropbeat.webp" class="d-block w-100" alt="dropbeat" />
+                <img loading="lazy" src="images/projects/dropbeat.webp" class="d-block w-100" alt="dropbeat" />
                 <div class="carousel-caption">
                   <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/dropbeat" target="_blank"
                     >Live Demo
@@ -394,7 +395,7 @@
               </div>
 
               <div class="carousel-item">
-                <img loading="lazy" src="images/hover.webp" class="d-block w-100" alt="hover" />
+                <img loading="lazy" src="images/projects/hover.webp" class="d-block w-100" alt="hover" />
                 <div class="carousel-caption">
                   <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/creative-hover-menu" target="_blank"
                     >Live Demo
@@ -405,7 +406,7 @@
               </div>
 
               <div class="carousel-item">
-                <img loading="lazy" src="images/iphone.webp" class="d-block w-100" alt="iphone" />
+                <img loading="lazy" src="images/projects/iphone.webp" class="d-block w-100" alt="iphone" />
                 <div class="carousel-caption">
                   <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/iphone" target="_blank"
                     >Live Demo
@@ -416,7 +417,7 @@
               </div>
 
               <div class="carousel-item">
-                <img loading="lazy" src="images/calculator.webp" class="d-block w-100" alt="calculator" />
+                <img loading="lazy" src="images/projects/calculator.webp" class="d-block w-100" alt="calculator" />
                 <div class="carousel-caption">
                   <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/calculator" target="_blank"
                     >Live Demo
@@ -427,7 +428,7 @@
               </div>
 
               <div class="carousel-item">
-                <img loading="lazy" src="images/lamp.webp" class="d-block w-100" alt="lamp" />
+                <img loading="lazy" src="images/projects/lamp.webp" class="d-block w-100" alt="lamp" />
                 <div class="carousel-caption">
                   <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/change-color-task" target="_blank"
                     >Live Demo
@@ -438,7 +439,7 @@
               </div>
 
               <div class="carousel-item">
-                <img loading="lazy" src="images/sebha.webp" class="d-block w-100" alt="sebha" />
+                <img loading="lazy" src="images/projects/sebha.webp" class="d-block w-100" alt="sebha" />
                 <div class="carousel-caption">
                   <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/sebha" target="_blank"
                     >Live Demo
@@ -449,7 +450,7 @@
               </div>
 
               <div class="carousel-item">
-                <img loading="lazy" src="images/template-one.webp" class="d-block w-100" alt="template-one" />
+                <img loading="lazy" src="images/projects/template-one.webp" class="d-block w-100" alt="template-one" />
                 <div class="carousel-caption">
                   <a aria-label="live demo" href="https://ahmed-elbqarey.github.io/elzero-template-one" target="_blank"
                     >Live Demo
@@ -698,6 +699,8 @@
     <script src="js/code.jquery.com_jquery-3.7.0.min.js"></script>
     <script src="js/circle-progress.js"></script>
     <script src="js/contactForm.js"></script>
+    <script src="js/live_chat.js"></script>
     <script src="js/main.js"></script>
+    
   </body>
 </html>
