--- a/index.html
+++ b/index.html
@@ -699,8 +699,8 @@
     <script src="js/code.jquery.com_jquery-3.7.0.min.js"></script>
     <script src="js/circle-progress.js"></script>
     <script src="js/contactForm.js"></script>
-    <script src="js/live_chat.js"></script>
+    <script src="js/live_chat.js"></script>gi
     <script src="js/main.js"></script>
-    
+
   </body>
 </html>
